--- a/client/templates/chat.html
+++ b/client/templates/chat.html
@@ -1,19 +1,27 @@
 
 <template name="chat">
-  <div>
+  <div class="container">
     <h1>Chat #{{chatName}}</h1>
-    <div class="chat-box">
-      <div class="chat-window">
-        {{#each messages}}
-          {{> message }}
-        {{/each}}
+    <div class="row">
+      <div class="chat-box">
+        <div class="guest-list four columns u-pull-right">
+          {{#each chatters}}
+            {{> chatter }}
+          {{/each}}
+        </div>
       </div>
-      <div class="guest-list">
-        {{#each chatters}}
-          {{> chatter }}
-        {{/each}}
+        <div class="five columns u-pull-left chat-window">
+          {{#each messages}}
+            {{> message }}
+          {{/each}}
+          <div class="row chat-bottom-spacer">
+          </div>
+        </div>
+    </div>
+    <div class="row">
+      <div class="five columns u-pull-left">
+        <input class="chat-input" type="text">
       </div>
-      <input class="chat-input" type="text">
     </div>
   </div>
 </template>
